--- a/app/templates/production.hbs
+++ b/app/templates/production.hbs
@@ -1,3 +1,6 @@
-<h2>Production</h2>
+{{loopy-loader start_date=start_date end_date=end_date start_time=start_time end_time=end_time load=(route-action 'loadData')}}
+
+<h2>{{#link-to 'production' start end}} Production From {{unbound start_time}} {{unbound end_time}} {{/link-to}}
+</h2>
 
 {{outlet}}
