--- a/app/templates/production/index.hbs
+++ b/app/templates/production/index.hbs
@@ -1,36 +1,1 @@
-<p>Product: {{model.[10].ProductName}}</p>
-<p>Dimension: {{#link-to "production.dimension" model.[10].DimensionID}} {{model.[10].DimensionName}}{{/link-to}}</p>
-<p>Boards: {{model.[10].BoardsSum}}</p>
-<p>BoardFeet: {{model.[10].BoardFeetSum}}</p>
-
-
-<table class="table">
-    <thead>
-        <tr>
-            <th>Dimension</th>
-            <th>Boards</th>
-            <th>BoardFeet</th>
-            <th>{{fa-icon "cogs"}}</th>
-        </tr>
-    </thead>
-    <tbody>
-        {{#each model as |row|}}
-        {{!-- ember install ember-truth-helpers --}}
-        <tr class="{{row-class row}}">
-            <td>
-                {{#link-to "production.dimension" row.DimensionID}} {{row.DimensionName}} {{/link-to}}
-                {{!-- logs to console --}}
-                {{!-- {{log row.DimensionName}} --}}
-                {{!-- inserts a debug point and stops there --}}
-                {{!-- {{debugger}}  --}}
-            </td>
-            <td class="quantity">{{row.BoardsSum}}</td>
-            {{!-- ember install ember-cli-accounting --}}
-            <td class="quantity">{{format-number row.BoardFeetSum precision=2}}</td>
-            <td>
-                <input type="checkbox" disabled={{eq row.BoardsSum 0}}>
-            </td>
-        </tr>
-        {{/each}}
-    </tbody>
-</table>
+{{table-production model=model}}
